:sparkles: Add get shared products api
