# swagger.yaml
@@ -197,6 +197,54 @@ paths:
           description: User not logged in
         '403':
           description: Not authorized to do this action
+  /products/shared/{token}:
+    summary: 'Shared products collection'
+    parameters:
+      - name: 'token'
+        in: 'path'
+        description: 'Token generated by the owner of the product'
+        required: true
+    get:
+      security: [ ]
+      summary: 'Get list of shared products'
+      tags:
+        - Products
+      responses:
+        '200':
+          description: 'Successful response'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ArrayOfProducts'
+        '403':
+          description: 'User not authorized'
+  /products/{productId}/shared/{token}:
+    summary: Shared product
+    parameters:
+      - name: "productId"
+        in: "path"
+        description: "Id of the product"
+        required: true
+      - name: "token"
+        in: "path"
+        description: "Token generated by the owner of the product"
+        required: true
+    get:
+      summary: Get shared product by id
+      security: [ ]
+      tags:
+        - Products
+      responses:
+        '200':
+          description: 'Successful response'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+        '403':
+          description: 'User not authorized'
+        '404':
+          description: 'Product not found'
   /categories/:
     summary: Categories Collection
     get:
